--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Pages/Index.razor
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Pages/Index.razor
@@ -1,9 +1,5 @@
-﻿@page "/"
+﻿@page "/VirtualCalculator"
 
-<PageTitle>Index</PageTitle>
+@code {
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+}
