--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
@@ -11,17 +11,27 @@ body {
     background: linear-gradient(to bottom, #f9544c 50%, #090c31 50%);
 }
 
+main {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-gap: 20px;
+}
+
 .calculator {
     width: 400px;
     background-color: #b8b8b4;
     padding: 50px 30px;
-    position: absolute;
-    transform: translate(-50%, -50%);
+    transform: translate(40%,10%);
     top: 50%;
     left: 30%;
     border-radius: 8px;
     border: black 2px solid;
     box-shadow: 0 20px 50px rgba(0, 5, 24, 0.4);
+}
+
+.tapeRoll {
+    padding: 50px 30px;
+    transform: translate(40%,10%);
 }
 
 .display {
@@ -73,11 +83,44 @@ input[type="button"].btnB {
     background-color: #5291cc;
 }
 
-input[type="text"]{
-   color: black;
+input[type="text"] {
+    color: black;
 }
 
+.actionBtns {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 40px;
+}
 
+textarea {
+    background: url("../Images/note.png") no-repeat;
+    padding: 210px 100px;
+    text-align: left;
+    overflow: auto;
+    font-size: 13px;
+    width: 271px;
+    height: 420px;
+    line-height: 16px;
+    border: 0px;
+}
+
+input[value="edit"] {
+    background: url("../Images/edit.png") no-repeat scroll 0 0 transparent;
+}
+
+input[value="download"] {
+    background: url("../Images/download.png") no-repeat scroll 0 0 transparent;
+}
+
+input[value="delete"] {
+    background: url("../Images/delete.png") no-repeat scroll 0 0 transparent;
+}
+
+input[value="print"] {
+    background: url("../Images/print.png") no-repeat scroll 0 0 transparent;
+}
 
 @media (min-width: 641px) {
     .page {
