--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
@@ -90,36 +90,48 @@ input[type="text"] {
 .actionBtns {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 20px;
     margin-top: 40px;
+    grid-gap:10px; 
 }
 
-textarea {
-    background: url("../Images/note.png") no-repeat;
+.calcText {
+    background: url("../Images/note.png") top no-repeat #fff;
     padding: 210px 100px;
     text-align: left;
-    overflow: auto;
+    overflow: hidden;
     font-size: 13px;
     width: 271px;
     height: 420px;
     line-height: 16px;
     border: 0px;
+    resize: none;
+   
 }
 
+.action-button {
+    height: 200%;
+    width: 50%;
+}
 input[value="edit"] {
-    background: url("../Images/edit.png") no-repeat scroll 0 0 transparent;
+    /*background: url("../Images/edit.png") no-repeat scroll 0 0 transparent;*/
+
+   
 }
 
 input[value="download"] {
-    background: url("../Images/download.png") no-repeat scroll 0 0 transparent;
+    /*background: url("../Images/download.png") no-repeat scroll 0 0 transparent;*/
+    
 }
 
 input[value="delete"] {
-    background: url("../Images/delete.png") no-repeat scroll 0 0 transparent;
+    /*background: url("../Images/delete.png") no-repeat scroll 0 0 transparent;*/
+    /*font-size: 12px;*/
+    
 }
 
 input[value="print"] {
-    background: url("../Images/print.png") no-repeat scroll 0 0 transparent;
+    /*background: url("../Images/print.png") no-repeat scroll 0 0 transparent;*/
+    
 }
 
 @media (min-width: 641px) {
