--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor
@@ -7,60 +7,65 @@
 <body>
     <div>
         <main>
-            
-                <div class="calculator">
-                    <div class="display">
-                        <input type="text" placeholder="0" id="input" disabled />
-                    </div>
-                    <div class="buttons">
 
-                        <input type="button" value="AC" id="clear" />
-
-                        <input type="button" value="DEL" id="erase" />
-                        <input type="button" value="%" class="input-button btnB" />
-                        <input type="button" value="/" class="input-button btnB" />
-
-                        <input type="button" value="7" class="input-button" />
-                        <input type="button" value="8" class="input-button" />
-                        <input type="button" value="9" class="input-button" />
-                        <input type="button" value="*" class="input-button btnB" />
-
-                        <input type="button" value="6" class="input-button" />
-                        <input type="button" value="5" class="input-button" />
-                        <input type="button" value="4" class="input-button" />
-                        <input type="button" value="-" class="input-button btnB" />
-
-                        <input type="button" value="1" class="input-button" />
-                        <input type="button" value="2" class="input-button" />
-                        <input type="button" value="3" class="input-button" />
-                        <input type="button" value="+" class="input-button btnB" />
-
-                        <input type="button" value="0" class="input-button" />
-                        <input type="button" value="." class="input-button" />
-                        <input type="button" value="=" id="equal" />
-
-
-
-                        @* <input type="button" value="(" class="input-button" />
-                        <input type="button" value=")" class="input-button" />*@
-                    </div>
+            <div class="calculator">
+                <div class="display">
+                    <input type="text" placeholder="0" id="input" disabled />
                 </div>
+                <div class="buttons">
 
-                <div class="tapeRoll">
-                    <div class="tape">
-                        <textarea class="calcText">
+                    <input type="button" value="AC" id="clear" />
+
+                    <input type="button" value="DEL" id="erase" />
+                    <input type="button" value="%" class="input-button btnB" />
+                    <input type="button" value="/" class="input-button btnB" />
+
+                    <input type="button" value="7" class="input-button" />
+                    <input type="button" value="8" class="input-button" />
+                    <input type="button" value="9" class="input-button" />
+                    <input type="button" value="*" class="input-button btnB" />
+
+                    <input type="button" value="6" class="input-button" />
+                    <input type="button" value="5" class="input-button" />
+                    <input type="button" value="4" class="input-button" />
+                    <input type="button" value="-" class="input-button btnB" />
+
+                    <input type="button" value="1" class="input-button" />
+                    <input type="button" value="2" class="input-button" />
+                    <input type="button" value="3" class="input-button" />
+                    <input type="button" value="+" class="input-button btnB" />
+
+                    <input type="button" value="0" class="input-button" />
+                    <input type="button" value="." class="input-button" />
+                    <input type="button" value="=" id="equal" />
+
+
+
+                    @* <input type="button" value="(" class="input-button" />
+                    <input type="button" value=")" class="input-button" />*@
+                </div>
+            </div>
+
+            <div class="tapeRoll">
+                <div class="tape">
+                    <textarea class="calcText">
 
                     </textarea>
-                    </div>
-                    <div class="actionBtns">
-                        <input type="button" value="edit" class="action-button" />
-                        <input type="button" value="download" class="action-button" />
-                        <input type="button" value="delete" class="action-button" />
-                        <input type="button" value="print" class="action-button" />
-                    </div>
-
                 </div>
-           
+                <div class="actionBtns">
+                    <input type="button" value="edit" class="action-button" />
+                    <input type="button" value="download" class="action-button" />
+                    <input type="button" value="delete" class="action-button" />
+                    <input type="button" value="print" class="action-button" />
+                    
+                    @*<img class="action-button" src="../Images/edit.png" />
+                    <img class="action-button" src="../Images/download.png" />
+                    <img class="action-button" src="../Images/delete.png" />
+                    <img class="action-button" src="../Images/print.png" />*@
+                </div>
+
+            </div>
+
         </main>
     </div>
 </body>
