--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor.css
@@ -47,10 +47,6 @@ main {
         font-size: 35px;
     }
 
-       /* .display input  {
-            color: black;
-        }*/
-
 .buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -97,14 +93,14 @@ input[type="text"] {
 .calcText {
     background: url("../Images/note.png") no-repeat scroll 0 0 transparent;
     background-size: 900px 900px;
-    padding: 210px 100px;
+    padding: 10px;
     text-align: left;
     overflow: hidden;
     font-size: 13px;
     width: 271px;
     height: 420px;
     line-height: 16px;
-    border: 2px solid black ;
+    border: 2px solid black;
     border-radius: 10px;
     resize: none;
 }
@@ -116,7 +112,7 @@ input.action-button {
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
-    font-size: 0; 
+    font-size: 0;
     border-radius: 10px;
     margin-left: 15px;
 }
@@ -137,32 +133,6 @@ input[value="print"] {
     background-image: url("../Images/print.png");
 }
 
-@media (min-width: 641px) {
-    .page {
-        flex-direction: row;
-    }
-
-    .sidebar {
-        width: 250px;
-        height: 100vh;
-        position: sticky;
-        top: 0;
-    }
-
-    .top-row {
-        position: sticky;
-        top: 0;
-        z-index: 1;
-    }
-
-        .top-row.auth ::deep a:first-child {
-            flex: 1;
-            text-align: right;
-            width: 0;
-        }
-
-    .top-row, article {
-        padding-left: 2rem !important;
-        padding-right: 1.5rem !important;
-    }
+@media screen and (max-width: 800px) {
+    
 }
