project is finalized! just missing essential commenting

--- a/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor
+++ b/VirtualAddingMachine/VirtualAddingMachine/Client/Shared/VirtualCalculator.razor
@@ -90,7 +90,7 @@
         tapeDisplay = string.Empty;
     }
 
-    public void Add(int input)
+    public void Add(char input)
     {
         if (operation == ' ')
         {
